# layer

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  __init__.py  config.html  crates.html  errors.html  features.html  index.html  installation.html  introduction.html  print.html  quickstart-bot.html  quickstart-user.html  searcher-c2a407aa.js  searchindex-186a9ff6.js  searchindex-316a2200.js  searchindex-3cf72212.js  searchindex-5f3e9a69.js  searchindex-63658c2a.js  searchindex-6c9329de.js  searchindex-799ad97c.js  searchindex-7c30200a.js  searchindex-9174ee05.js  searchindex-acf26dd3.js  searchindex-b121211c.js  searchindex-b99270d4.js  searchindex-c09552cd.js  searchindex-c8c24f20.js  searchindex-dfc84dac.js  searchindex-e61130bb.js  toc-3a947583.js  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy-docs.yml  deploy.yml
advanced/: dc-migration.html  layer-upgrade.html  proxy.html  raw-api.html  retry.html
api/: admin-rights.html  client.html  dialogs.html  input-message.html  participants.html  peer-types.html  search.html  typing-guard.html
authentication/: 2fa.html  bot-login.html  session-backends.html  session.html  user-login.html
codegen/: __main__.py  generator.py  pythonifier.py
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md  config.md  crates.md  errors.md  features.md  installation.md  introduction.md  quickstart-bot.md  quickstart-user.md
docs/src/advanced/: dc-migration.md  layer-upgrade.md  proxy.md  raw-api.md  retry.md
docs/src/api/: admin-rights.md  client.md  dialogs.md  input-message.md  participants.md  peer-types.md  search.md  typing-guard.md
docs/src/authentication/: 2fa.md  bot-login.md  session-backends.md  session.md  user-login.md
docs/src/messaging/: formatting.md  keyboards.md  media.md  reactions.md  receiving.md  sending.md
docs/src/updates/: callbacks.md  incoming-message.md  inline-mode.md  update-types.md
docs/theme/: custom.css  custom.js
https:/github.com/ankit-chaubey/: ferogram  ferogram.html
layer/: Cargo.toml
layer-app/: Cargo.toml
layer-app/src/: main.rs
layer-bot/: Carggo.toml  Cargo.toml
layer-bot/src/: main.rs
layer-client/: Cargo.toml  README.md
layer-client-core/: Cargo.toml
layer-client-core/src/: lib.rs
layer-client/src/: builder.rs  dc_migration.rs  dc_pool.rs  errors.rs  inline_iter.rs  keyboard.rs  lib.rs  macros.rs  main.rs  media.rs  parsers.rs  participants.rs  peer_ref.rs  proxy.rs  pts.rs  pts_tests.rs  reactions.rs  restart.rs  retry.rs  search.rs  session.rs  session_backend.rs  socks5.rs  transport.rs  transport_intermediate.rs  transport_obfuscated.rs  two_factor_auth.rs  types.rs  typing_guard.rs  update.rs
layer-client/tests/: integration.rs
layer-connect/: Cargo.toml
layer-connect/src/: main.rs
layer-crypto/: Cargo.toml  README.md
layer-crypto/src/: aes.rs  auth_key.rs  deque_buffer.rs  factorize.rs  lib.rs  obfuscated.rs  rsa.rs  sha.rs
layer-mtproto/: Cargo.toml  README.md
layer-mtproto/src/: authentication.rs  encrypted.rs  lib.rs  message.rs  session.rs  transport.rs
layer-mtproto/tests/: session.rs
layer-tl-gen/: Cargo.toml  README.md
layer-tl-gen/src/: codegen.rs  grouper.rs  lib.rs  metadata.rs  namegen.rs
layer-tl-parser/: Cargo.toml  README.md
layer-tl-parser/src/: errors.rs  iterator.rs  lib.rs  utils.rs
layer-tl-parser/src/tl/: category.rs  definition.rs  flag.rs  mod.rs  parameter.rs  parameter_type.rs  ty.rs
layer-tl-parser/tests/: parse.rs
layer-tl-types/: Cargo.toml  README.md  build.rs
layer-tl-types/src/: deserialize.rs  generated.rs  lib.rs  serialize.rs
layer-tl-types/tests/: ser_de.rs
layer-tl-types/tl/: api.tl
layer/src/: lib.rs
messaging/: formatting.html  keyboards.html  media.html  reactions.html  receiving.html  sending.html
mtproto/: core.py
src/: lib.rs
theme/: custom-6adfbc42.js  custom-ff45141f.js
tl/: parser.py
updates/: callbacks.html  incoming-message.html  inline-mode.html  update-types.html
