[workspace]
resolver = "2"

members = [
    "layer-tl-parser",
    "layer-tl-gen",
    "layer-tl-types",
    "layer-crypto",
    "layer-mtproto",
    "layer",
    "layer-connect",
    "layer-client",   # high-level Client library
    "layer-app",      # binary: login + send message
]

[workspace.package]
version     = "0.1.2"
edition     = "2024"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
authors     = ["Ankit Chaubey <ankitchaubey.dev@gmail.com>"]
repository  = "https://github.com/ankit-chaubey/layer"
homepage    = "https://github.com/ankit-chaubey/layer"
