[workspace]
resolver = "2"

members = [
    "layer-tl-parser",
    "layer-tl-gen",
    "layer-tl-types",
    "layer-crypto",
    "layer-mtproto",
    "layer",
    "layer-connect",
    "layer-client",   # high-level Client library
    "layer-app",      # binary: login + send message
]

[workspace.package]
version       = "0.4.2"
edition       = "2024"
license       = "MIT OR Apache-2.0"
readme        = "README.md"
authors       = ["Ankit Chaubey <ankitchaubey.dev@gmail.com>"]
repository    = "https://github.com/ankit-chaubey/layer"
homepage      = "https://github.com/ankit-chaubey/layer"
documentation = "https://docs.rs/layer-client"

[workspace.dependencies]
layer-tl-parser = { path = "layer-tl-parser", version = "0.4.2" }
layer-tl-gen    = { path = "layer-tl-gen",    version = "0.4.2" }
layer-tl-types  = { path = "layer-tl-types",  version = "0.4.2" }
layer-crypto    = { path = "layer-crypto",     version = "0.4.2" }
layer-mtproto   = { path = "layer-mtproto",    version = "0.4.2" }
layer-client    = { path = "layer-client",     version = "0.4.2" }
