[package]
name        = "layer-app"
description = "Telegram client binary: phone login, 2FA, bot login, updates — powered by layer-client"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
publish = false

[[bin]]
name = "layer-app"
path = "src/main.rs"

[dependencies]
layer-client = { workspace = true }
tokio        = { version = "1", features = ["full"] }
env_logger   = "0.11"
