[package]
name        = "layer-app"
description = "Userbot (user account only) built with layer-client"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
publish = false

[[bin]]
name = "layer-app"
path = "src/main.rs"

[dependencies]
layer-client   = { workspace = true }
layer-tl-types = { path = "../layer-tl-types", version = "0.4.5", features = ["tl-api", "tl-mtproto"] }
tokio          = { version = "1", features = ["full"] }
env_logger     = "0.11"
chrono         = { version = "0.4", features = ["clock"] }
