[package]
name        = "layer-bot"
description = "Showcase bot built with layer-client"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
publish = false

[[bin]]
name = "layer-bot"
path = "src/main.rs"

[dependencies]
layer-client   = { path = "../layer-client",  version = "0.2.0" }
layer-tl-types = { path = "../layer-tl-types", version = "0.2.0", features = ["tl-api", "tl-mtproto"] }
tokio          = { version = "1", features = ["full"] }
env_logger     = "0.11"
log            = "0.4"
chrono         = { version = "0.4", features = ["clock"] }
