[package]
name        = "layer-client-core"
description = "High-level Telegram client — connect, login, 2FA, send messages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
layer-tl-types = { path = "../layer-tl-types", features = ["tl-api", "tl-mtproto"] }
layer-mtproto  = { path = "../layer-mtproto" }
getrandom      = "0.2"
flate2         = "1"
# 2FA (SRP) — same deps as grammers-crypto
num-bigint     = "0.4"
num-traits     = "0.2"
sha2           = "0.10"
hmac           = "0.12"
pbkdf2         = "0.12"
