[package]
name        = "layer-client"
description = "Production-grade async Telegram client — updates, bots, flood-wait, dialogs, messages"
readme = "README.md"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
documentation = "https://docs.rs/layer-client"
keywords             = ["telegram", "mtproto", "client", "bot", "async"]
categories           = ["api-bindings", "network-programming", "asynchronous"]

[dependencies]
layer-tl-types = { workspace = true, features = ["tl-api", "tl-mtproto"] }
layer-mtproto  = { workspace = true }
tokio          = { version = "1",  features = ["net", "io-util", "sync", "time", "rt", "rt-multi-thread", "macros"] }
tokio-util     = { version = "0.7", features = ["rt"] }
getrandom      = "0.2"
flate2         = "1"
num-bigint     = "0.4"
num-traits     = "0.2"
sha2           = "0.10"
hmac           = "0.12"
pbkdf2         = "0.12"
# G-18: replaced by tracing (tracing has log feature bridge)
tracing        = { version = "0.1", features = ["log"] }
serde          = { version = "1", features = ["derive"], optional = true }
mime_guess     = "2"
base64         = "0.22"
pulldown-cmark = "0.11"
chrono         = { version = "0.4", features = ["clock"] }
rusqlite       = { version = "0.31", optional = true }
libsql         = { version = "0.6", features = ["core"], optional = true }
html5ever      = { version = "0.38", optional = true }
tokio-socks    = "0.5"
socket2        = { version = "0.5", features = ["all"] }

[features]
sqlite-session  = ["rusqlite"]
libsql-session  = ["dep:libsql"]
serde           = ["dep:serde"]
## Enable HTML ↔ entity parsing via the built-in parser (no extra deps required).
html = []
## Enable HTML parsing backed by html5ever (spec-compliant tokenizer).
## When active, overrides the built-in `html` parser.
html5ever = ["dep:html5ever"]

[package.metadata.docs.rs]
# Enable all feature flags when building docs on docs.rs
features = ["sqlite-session", "libsql-session", "html", "html5ever"]
rustdoc-args = ["--cfg", "docsrs"]
