[package]
name        = "layer-connect"
description = "Full Telegram MTProto auth key generation + encrypted API demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "connect"
path = "src/main.rs"

[dependencies]
layer-tl-types = { path = "../layer-tl-types", features = ["tl-mtproto"] }
layer-mtproto  = { path = "../layer-mtproto" }
