[package]
name        = "layer-connect"
description = "Demo binary: full MTProto auth key generation + encrypted API call"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
publish = false

[[bin]]
name = "connect"
path = "src/main.rs"

[dependencies]
layer-tl-types = { workspace = true, features = ["tl-mtproto"] }
layer-mtproto  = { workspace = true }
