[package]
name        = "layer-crypto"
description = "Cryptographic primitives for Telegram MTProto (AES-IGE, RSA, SHA, auth key)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
aes        = "0.8.4"
getrandom  = "0.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
sha1       = "0.10.6"
sha2       = "0.10.9"
