[package]
name        = "layer-tl-gen"
description = "Build-time code generator: Telegram TL schema → Rust source"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
keywords             = ["telegram", "mtproto", "tl", "codegen", "build"]
categories           = ["development-tools::build-utils", "development-tools"]

[dependencies]
layer-tl-parser = { path = "../layer-tl-parser", version = "0.1.1" }
