[package]
name        = "layer-tl-parser"
description = "Parser for Telegram's Type Language (.tl) schema files"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme               = "../../README.md"
keywords             = ["telegram", "mtproto", "tl", "parser", "codegen"]
categories           = ["parser-implementations", "development-tools"]
